# COPE-Agentic-Framework

./: .gitignore  =1.0.0  README.md  claude_starter.py  get_data.py  pyproject.toml
src/: codestral_agent.py
src/agent/: .env  agent.py  basic1.py  java_code_parser.py  java_profiler.py
src/analyzer/: external_tools.py  graph.py  llm_agent.py  nodes.py  state.py
src/architectures/: architecture_registry.py  arm64.py  x86_64.py
src/architectures/m2sim_scripts/: README.md  blocking  blocking.cc  copetest.py  test_c.c
src/architectures/m2sim_scripts/c/: for_loop.c  lexorder.c  mat-mat.hh  test_c
src/architectures/m2sim_scripts/cpp/: no_blocking.cc
src/architectures/m2sim_scripts/setting-1/: m2sim_output_x86.output  mem-config  mem-out.txt  memkpl-config
src/architectures/m2sim_scripts/setting-2/: m2sim_output_x86.output  mem-config  mem-out.txt  memsi-config
src/cope_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/utils/: parsers.py
