[project]
name = "cope_project"
version = "0.1.0"
description = "This is a project to optimize the java code"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "analyzer==0.1.1",
    "anthropic==0.51.0",
    "beautifulsoup4==4.13.4",
    "javalang==0.13.0",
    "langchain_core==0.3.59",
    "langgraph==0.4.3",
    "mistralai==1.7.0",
    "Requests==2.32.3",
]
